--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <meta name="description" content="Sou Ryan, um desenvolvedor front-end e UI/UX designer apaixonado por criar experiências digitais incríveis. Neste portfólio, você encontrará meus projetos, serviços personalizados e detalhes sobre minha experiência profissional. Entre em contato para discutir como posso ajudar a transformar suas ideias em realidade."> 
+    <meta name="author" content="Ryan Zanardo, Desenvolvedor Front end">
+    <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,">
+    <meta name="robots" content="index,nofollow">
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="icon" type="image/png" href="./assets/LogoBlack.svg">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
