--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Ryan Zanardo, Desenvolvedor Front end">
     <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,">
     <meta name="robots" content="index,nofollow">
+    <meta name="google-site-verification" content="_i2yzRFtTyS_zVGAPIQygcRht6T6CwfuHE8B-REOccU" />
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="icon" type="image/png" href="./assets/LogoBlack.svg">
