--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sou Ryan, um desenvolvedor front-end e UI/UX designer apaixonado por criar experiências digitais incríveis. Neste portfólio, você encontrará meus projetos, serviços personalizados e detalhes sobre minha experiência profissional. Entre em contato para discutir como posso ajudar a transformar suas ideias em realidade."> 
     <meta name="author" content="Ryan Zanardo, Desenvolvedor Front end">
-    <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,ryan, portfolio, ryan portfolio">
+    <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,ryan, portfolio, ryan portfolio, desenvolvedor dourados">
     <meta name="robots" content="index,nofollow">
     <meta name="google-site-verification" content="_i2yzRFtTyS_zVGAPIQygcRht6T6CwfuHE8B-REOccU" />
     
