--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
         <div class="nav-bar">
-            <img src="./assets/Group.svg" width="50px">
+            <a href="#Home"><img title="Voltar ao top" src="./assets/Group.svg" width="50px"></a>
             <nav class="navigation">
                 <div class="nav-itens">
                     <span class="material-symbols-outlined nav-close-btn">close</span>
