alteraçao card proj

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sou Ryan, um desenvolvedor front-end e UI/UX designer apaixonado por criar experiências digitais incríveis. Neste portfólio, você encontrará meus projetos, serviços personalizados e detalhes sobre minha experiência profissional. Entre em contato para discutir como posso ajudar a transformar suas ideias em realidade."> 
     <meta name="author" content="Ryan Zanardo, Desenvolvedor Front end">
-    <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,ryan, portfolio, ryan zanardo, desenvolvedor dourados">
+    <meta name="keywords" content="Front end, Site dourados, desenvolvedor dourados, landing page dourados, ui/ux designer, desenvolvedor campo grande, portfolio, designer,">
     <meta name="robots" content="index,nofollow">
-    <meta name="google-site-verification" content="_i2yzRFtTyS_zVGAPIQygcRht6T6CwfuHE8B-REOccU" />
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="icon" type="image/png" href="./assets/LogoBlack.svg">
     <title>Ryan Zanardo | Desenvolvedor Front End & UI/UX Designer</title>
     <link rel="stylesheet" href="style.css">
@@ -42,10 +43,10 @@
                 <h1 class="home-nome">Ryan</h1>
                 <h1>Zanardo</h1>
                 <h2>Desenvolvedor<br><span>Front End & UI/UX Designer</span></h2>
-            </div>
+            </div> 
 
             <div class="botao">
-                <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5567998449141"><h3>Fale Comigo</h3></a>
+                <a target="_blank" href="http://api.whatsapp.com/send?1=pt_BR&phone=5567998449741"><h3>Fale Comigo</h3></a>
             </div>
 
             <a href="#Exp"><img src="./assets/Vector.svg" width="40px"></a>
@@ -167,29 +168,38 @@
             <div class="cont-port">
 
                 <div class="card-container reveal">
-                    <div class="card">
-                        <div class="img-content">
-                            <img src="./assets/Port.svg">
+                    <div class="port-item">
+                        <div class="port-img">
+                             <img src="./assets/Print Panfleto.svg">
                         </div>
-                        <div class="content">
-                            <p class="heading">Em Breve</p>
+                        <div class="port-info">
+                             <h4>Projeto Panfleto</h4>
+                             <p>Trabalho Realizado para a Empresa Junior CodeWA, um panfleto/pagina para o evento de faculdades abertas da ufgd</p>
+                             <div class="botao">
+                                <a target="_blank" href="https://github.com/RyanZanardo/Projeto-Panfleto-CodeWA"><h3>Veja Mais</h3></a>
+                            </div>
                         </div>
-                    </div>
+                   </div>
 
                     <div class="num">
                         <p>01</p>
                     </div>
                 </div>
+                
 
                 <div class="card-container reveal">
-                    <div class="card">
-                        <div class="img-content">
-                            <img src="./assets/Port.svg">
+                    <div class="port-item">
+                        <div class="port-img">
+                             <img src="./assets/Port.svg">
                         </div>
-                        <div class="content">
-                            <p class="heading">em Breve</p>
+                        <div class="port-info">
+                             <h4>Projeto Panfleto</h4>
+                             <p>Trabalho Realizado para a Empresa Junior CodeWA, um panfleto/pagina para o evento de faculdades abertas da ufgd</p>
+                             <div class="botao">
+                                <a target="_blank" href="https://github.com/RyanZanardo/Projeto-Panfleto-CodeWA"><h3>Veja Mais</h3></a>
+                            </div>
                         </div>
-                    </div>
+                   </div>
 
                     <div class="num">
                         <p>02</p>
@@ -197,15 +207,18 @@
                 </div>
 
                 <div class="card-container reveal">
-                    <div class="card">
-                        <div class="img-content">
-                            <img src="./assets/Port.svg">
+                    <div class="port-item">
+                        <div class="port-img">
+                             <img src="./assets/Port.svg">
                         </div>
-                        <div class="content">
-                            <p class="heading">Em Breve</p>
-                            <!-- <p></p> -->
+                        <div class="port-info">
+                             <h4>Projeto Panfleto</h4>
+                             <p>Trabalho Realizado para a Empresa Junior CodeWA, um panfleto/pagina para o evento de faculdades abertas da ufgd</p>
+                             <div class="botao">
+                                <a target="_blank" href="https://github.com/RyanZanardo/Projeto-Panfleto-CodeWA"><h3>Veja Mais</h3></a>
+                            </div>
                         </div>
-                    </div>
+                   </div>
 
                     <div class="num">
                         <p>03</p>
@@ -251,8 +264,8 @@
                     Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.
                 </p>
                 <div class="footer-icons">
-                    <a href="https://instagram.com/ryan_zanardo?igshid=ZDdkNTZiNTM="><img src="./assets/Vector-Insta.svg" width="30px"> </a>
-                    <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5567998449141"><img src="./assets/Vector-whatts.svg" width="30px"> </a>
+                    <a target="_blank" href="https://instagram.com/ryan_zanardo?igshid=ZDdkNTZiNTM="><img src="./assets/Vector-Insta.svg" width="30px"> </a>
+                    <a target="_blank" href="http://api.whatsapp.com/send?1=pt_BR&phone=5567998449741"><img src="./assets/Vector-whatts.svg" width="30px"> </a>
                     <a><img src="./assets/Vector-Face.svg" width="30px"> </a>
                 </div>
             </div>
@@ -260,7 +273,6 @@
     </footer>
 
     <script src="./script.js"></script>
-    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
