alteraçao card proj2

--- a/index.html
+++ b/index.html
@@ -193,11 +193,7 @@
                              <img src="./assets/Port.svg">
                         </div>
                         <div class="port-info">
-                             <h4>Projeto Panfleto</h4>
-                             <p>Trabalho Realizado para a Empresa Junior CodeWA, um panfleto/pagina para o evento de faculdades abertas da ufgd</p>
-                             <div class="botao">
-                                <a target="_blank" href="https://github.com/RyanZanardo/Projeto-Panfleto-CodeWA"><h3>Veja Mais</h3></a>
-                            </div>
+                             <h4>EM BREVE</h4>
                         </div>
                    </div>
 
@@ -212,11 +208,7 @@
                              <img src="./assets/Port.svg">
                         </div>
                         <div class="port-info">
-                             <h4>Projeto Panfleto</h4>
-                             <p>Trabalho Realizado para a Empresa Junior CodeWA, um panfleto/pagina para o evento de faculdades abertas da ufgd</p>
-                             <div class="botao">
-                                <a target="_blank" href="https://github.com/RyanZanardo/Projeto-Panfleto-CodeWA"><h3>Veja Mais</h3></a>
-                            </div>
+                             <h4>EM BREVE</h4>
                         </div>
                    </div>
 
